--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "private": true,
+  "homepage": "https://brizuela-go.github.io/blog-con-graphcms/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "animate.css": "^4.1.1",
@@ -23,6 +26,7 @@
     "autoprefixer": "^10.4.0",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
+    "gh-pages": "^3.2.3",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.7",
     "typescript": "4.5.4"
